--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               </p>
             </div>
             <div class="mission-img col-md-4">
-              <img class="sec-miss-img" src="images/demo/mission-1.jpg" alt="mission-1">
+              <img class="sec-miss-img" src="images/zero-emission.png" alt="mission-1">
             </div>
           </div>
 
@@ -253,7 +253,7 @@
 
           <div class="about-us-content" data-aos="fade-right">
             <div class="mission-img col-md-4">
-              <img class="sec-miss-img" src="images/demo/mission-2.jpg" alt="mission-2">
+              <img class="sec-miss-img" src="images/empowerment.png" alt="mission-2">
             </div>
             <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Empowered Women & Men - REDEFINE MOBILITY</h3>
@@ -277,8 +277,8 @@
                 <a href="Initiative.html#green-jobs" class="know-more">know more</a>
               </p>
             </div>
-            <div class="mission-img col-md-4">
-              <img src="images/demo/mission-3.png" alt="mission-3">
+            <div class="mission-img col-md-4 ">
+              <img class="third-miss" src="images/green.png" alt="mission-3">
             </div>
           </div>
         </div>
