--- a/AboutUs.html
+++ b/AboutUs.html
@@ -401,6 +401,7 @@
 
 
   <script src="JavaScript/onclicked.js"></script>
+  <script src="JavaScript/contact-form.js"></script>
 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <script src="js/jquery.min.js"></script>
