--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -362,7 +362,6 @@
 
   <script src="JavaScript/onclicked.js"></script>
 
-
   <script src="js/jquery.min.js"></script>
 
   <script src="js/popper.min.js"></script>
@@ -385,6 +384,8 @@
     gtag('js', new Date());
     gtag('config', 'UA-23581568-13');
   </script>
+
+<script src="JavaScript/contact-form.js"></script>
 </body>
 
 </html>
