--- a/customer.html
+++ b/customer.html
@@ -335,7 +335,7 @@
 
   <script src="JavaScript/onclicked.js"></script>
 
-
+  <script src="JavaScript/contact-form.js"></script>
   <script src="js/jquery.min.js"></script>
 
   <script src="js/popper.min.js"></script>
