--- a/faq.html
+++ b/faq.html
@@ -297,7 +297,7 @@
       });
     </script>
 
-
+<script src="JavaScript/contact-form.js"></script>
 <script>
   var acc = document.getElementsByClassName("faqs-accordion");
   for (var i = 0; i < acc.length; i++) {
