--- a/privacy.html
+++ b/privacy.html
@@ -1691,6 +1691,7 @@
 
 
     <script src="js/jquery.min.js"></script>
+    <script src="JavaScript/contact-form.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/uza.bundle.js"></script>
