--- a/ContactUs.html
+++ b/ContactUs.html
@@ -195,7 +195,7 @@
   
 
  <script src="JavaScript/onclicked.js"></script>
-
+ <script src="JavaScript/contact-form.js"></script>
 
   <script src="js/jquery.min.js"></script>
 
