--- a/Initiative.html
+++ b/Initiative.html
@@ -411,7 +411,7 @@
 
   <script src="JavaScript/onclicked.js"></script>
 
-
+  <script src="JavaScript/contact-form.js"></script>
   <script src="js/jquery.min.js"></script>
 
   <script src="js/popper.min.js"></script>
