--- a/login.html
+++ b/login.html
@@ -317,6 +317,8 @@ text-align: center;
 
 <script src="js/jquery.min.js"></script>
 
+<script src="JavaScript/contact-form.js"></script>
+
 <script src="js/popper.min.js"></script>
 
 <script src="js/bootstrap.min.js"></script>
