--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-                <h3 class="mt-3 super-sub-points"><strong>Easy pick & drop</strong></h3>
+                <h3 class="mt-3 super-sub-points"><strong>Low Cost Rides</strong></h3>
                 <p class='ellipse'>Rides available at a very
                   attractive rates. Low surge
                   charges and no hidden cost.
@@ -410,7 +410,7 @@
               </div>
               <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img">
-                  <img src="images/demo/Rider image-icon-04.png" alt="Image 4">
+                  <img src="images/bike-helmet.png" alt="Image 4">
                 </div>
                 <h3 class="super-sub-points"><strong>Safe rides</strong></h3>
                 <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in
@@ -457,17 +457,12 @@
 
       </div>
 
-    
-
       <!-- Coustomers -->
-
 
     </section>
   </section>
 
-
   <!-- Home-section-ends  -->
-
 
   <!-- FOOTER SECTION  -->
 
