--- a/ContactUs.html
+++ b/ContactUs.html
@@ -140,31 +140,31 @@
         </div>
 
         <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-            <div class="form-heading">
-                <h3>Contact Us</h3>
-            </div>
-            <div class="contact-form">
-                <table class="table-black">
-                    <tbody>
-                        <tr>
-                            <td><input placeholder="Name" type="text" class="form-control form-input-block"></td>
-                        </tr>
-                        <tr>
-                            <td><input placeholder="Contact Number" type="number" class="form-control"></td>
-                        </tr>
-                        <tr>
-                            <td><input placeholder="Email" type="email" class="form-control"></td>
-                        </tr>
-                        <tr>
-                            <td><textarea placeholder="Message" name="" id="" class="form-control" rows="3"></textarea></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="sub-btn">
-                <button type="submit" class="btn btn-primary"><span>Contact</span></button>
-            </div>
-           
+          <div class="form-heading">
+            <h3>Contact Us</h3>
+          </div>
+          <div class="contact-form">
+            <table class="table-black">
+              <tbody>
+                <tr>
+                  <td><input placeholder="Name" type="text" class="form-control form-input-block" name="connect-name" id="connect-name"></td>
+                </tr>
+                <tr>
+                  <td><input placeholder="Contact Number" type="number" class="form-control text-decoration-none" name="connect-phone" id="connect-phone"></td>
+                </tr>
+                <tr>
+                  <td><input placeholder="Email" type="email" class="form-control" name="connect-email" id="connect-email" ></td>
+                </tr>
+                <tr>
+                  <td><textarea placeholder="Message" name="connect-message" id="connect-message" class="form-control" rows="3"></textarea></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="sub-btn mt-3">
+            <button type="submit" class="btn btn-primary" name="contact-submit" id="contact-submit"><span>Contact</span></button>
+          </div>
+
         </div>
         <div class="col-md-1 d-flex align-items-center justify-content-center mt-2 ">
           
