--- a/login.html
+++ b/login.html
@@ -84,7 +84,7 @@ text-align: center;
         <div class="main-header-area">
           <div class="classy-nav-container breakpoint-off">
             <nav class="classy-navbar justify-content-between" id="uzaNav">
-              <a class="nav-brand" href="index.html"><img src="images/logo.png" alt="Ryder Logo"></a>
+              <a class="nav-brand" href="index.html"><img src="images/new-logo.png" alt="Ryder Logo"></a>
               <div class="classy-navbar-toggler">
                 <span class="navbarToggler"><span></span><span></span><span></span></span>
               </div>
@@ -144,7 +144,7 @@ text-align: center;
               </div>
               <div class="col-md-9 col-lg-6  offset-xl-1 d-flex flex-column justify-content-center align-items-center py-2" style=" background: #f1c9c95b; border-radius: 40px;">
                 <div class="login-logo">
-                  <img src="images/logo.png" alt="">
+                  <img src="images/new-logo.png" alt="">
                 </div>
                 <form class=" new-login">
                   <!-- Email input -->
