--- a/privacy.html
+++ b/privacy.html
@@ -64,7 +64,7 @@
                             <div class="row app-links">
                                 <div class="col-12 col-md-6 driver-app border-right">
                                     <h5 class="mb-5">Driver App Download</h5>
-                                    <a href=""><img class="mb-4" src="images/logo.png" alt=""></a>
+                                    <a href=""><img class="mb-4" src="images/new-logo.png" alt=""></a>
                                     <p>Android</p>
                                 </div>
                                 <div class="col-12 col-md-6 customer-app">
@@ -203,7 +203,7 @@
         <div class="main-header-area">
             <div class="classy-nav-container breakpoint-off">
                 <nav class="classy-navbar justify-content-between" id="uzaNav">
-                    <a class="nav-brand" href="index.html"><img src="images/logo.png" alt="Ryder Logo"></a>
+                    <a class="nav-brand" href="index.html"><img src="images/new-logo.png" alt="Ryder Logo"></a>
                     <div class="classy-navbar-toggler">
                         <span class="navbarToggler"><span></span><span></span><span></span></span>
                     </div>
