--- a/rider_safety.html
+++ b/rider_safety.html
@@ -49,7 +49,7 @@
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
         <nav class="classy-navbar justify-content-between" id="uzaNav">
-          <a class="nav-brand" href="index.html"><img src="images/logo.png" alt="Ryder Logo"></a>
+          <a class="nav-brand" href="index.html"><img src="images/new-logo.png" alt="Ryder Logo"></a>
           <div class="classy-navbar-toggler">
             <span class="navbarToggler"><span></span><span></span><span></span></span>
           </div>
