--- a/safety.html
+++ b/safety.html
@@ -59,7 +59,7 @@
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
         <nav class="classy-navbar justify-content-between" id="uzaNav">
-          <a class="nav-brand" href="index.html"><img src="images/logo.png" alt="Ryder Logo"></a>
+          <a class="nav-brand" href="index.html"><img src="images/new-logo.png" alt="Ryder Logo"></a>
           <div class="classy-navbar-toggler">
             <span class="navbarToggler"><span></span><span></span><span></span></span>
           </div>
@@ -158,7 +158,7 @@
   </section>
 
   <div class="social-media-accordion">
-    <button class="accordion-btn"><i class="bi bi-link-45deg"></i></button>
+    <button class="social-accordion-btn"><i class="bi bi-link-45deg"></i></button>
     <div class="accordion-content">
       <a href="#" class="social-link"><img src="images/demo/insta.png" alt="Instagram"></a>
       <a href="#" class="social-link"><img src="images/demo/fb.png" alt="Facebook"></a>
@@ -320,7 +320,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      const accordionBtn = document.querySelector('.accordion-btn');
+      const accordionBtn = document.querySelector('.social-accordion-btn');
       const accordionContent = document.querySelector('.accordion-content');
 
       accordionBtn.addEventListener('click', function () {
