--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="main-header-area">
       <div class="classy-nav-container breakpoint-off">
         <nav class="classy-navbar justify-content-between" id="uzaNav">
-          <a class="nav-brand" href="index.html"><img src="images/logo.png" alt="Ryder Logo"></a>
+          <a class="nav-brand" href="index.html"><img src="images/new-logo.png" alt="Ryder Logo"></a>
           <div class="classy-navbar-toggler">
             <span class="navbarToggler"><span></span><span></span><span></span></span>
           </div>
@@ -109,7 +109,7 @@
                 <span class="welcome-text d-inline-block text-center">
                   <!-- <span class="d-inline-block text-center"> -->
                   <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30 ">
-                    First ever <em>electric bike</em>
+                    First ever <span>electric bike</span>
                     <br>service dedicated to
                     <br><span>Delhi Metro</span> travellers
                   </h2>
@@ -125,8 +125,10 @@
                     <span bg-success>Green Rides</span>
                   </h5>
 
-                  <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">DOWNLOAD APP</a>
+                  <div class="d-flex align-items-center  justify-content-evenly">
+                    <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">DOWNLOAD APP</a>
                   <a href="Driver_registration.html" class="btn rydr-btn btn-3 banner-btn-2">SIGNUP AS DRIVER</a>
+                  </div>
                 </span>
               </div>
 
@@ -243,8 +245,6 @@
             </div>
           </div>
 
-          <br>
-
           <div class="about-us-content" data-aos="fade-right">
             <div class="mission-img col-md-4">
               <img class="sec-miss-img" src="images/empowerment.png" alt="mission-2">
@@ -283,8 +283,8 @@
     <section class="container-fluid">
 
 
-      <div class="second-bottom  ">
-        <div class=" section-margin">
+      <div class="second-bottom section-margin ">
+        <div class=" ">
           <h2 class="sub-heading">Why Choose RYDR ?</h2>
         </div>
         <div class="why-choose" data-aos="zoom-in">
@@ -318,11 +318,11 @@
             <h2 class="sub-heading">What is in it For You</h2>
           </div>
           <div class="box-2">
-            <div class="bottom-box customers active">
-              <h4 class="text-uppercase">Customers</h4>
+            <div class="bottom-box customers ">
+              <h4 class="text-uppercase active">Customers</h4>
             </div>
             <div class="bottom-box drivers-riders">
-              <h4 class="text-uppercase">Drivers/Riders</h4>
+              <h4 class="text-uppercase">Drivers</h4>
             </div>
           </div>
         </div>
@@ -343,28 +343,28 @@
 
             <div class="customer-cards-second">
 
-              <div class="customer-item " data-aos="zoom-in" style="background-color: #ffd7d7;">
+              <div class="customer-item " data-aos="zoom-in">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
               
                   <h3 class="mt-3 super-sub-points"><strong>Easy pick & drop</strong> </h3>
                 <p class='ellipse'>Pick you up from any Metro
                   Station and Drop you at your
-                  destination and Vice-Versap.</p>
+                  destination and Vice-Versa.</p>
                 
               </div>
 
 
-              <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
+              <div class="customer-item" data-aos="zoom-in">
                 <div class="item-img"><img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
                 <h3 class="mt-3 super-sub-points"><strong>Low Cost Rides</strong></h3>
                 <p class='ellipse'>Rides available at a very
                   attractive rates. Low surge
                   charges and no hidden cost.
-                  Pay before you start the ride..</p>
+                  Pay before you start the ride.</p>
               </div>
 
 
-              <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
+              <div class="customer-item" data-aos="zoom-in">
                 <div class="item-img"> <img src="images/demo/Rider image-icon-02.png" alt="Image 3"></div>
                 <h3 class="mt-3 super-sub-points"><strong>Assured rides</strong></h3>
                 <p class='ellipse'>Get assured rides from any
@@ -383,24 +383,21 @@
           <div class="driver-cards section-margin container-fluid col-md-10" data-aos="zoom-in">
             <div class="customer-cards-second">
 
-              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+              <div class="customer-item driver-items" data-aos="zoom-in" >
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
                 <h3 class="super-sub-points"><strong>Easy pick & drop</strong></h3>
                 <p class="ellipse">Pick you up from any Metro Station and drop you at your destination and vice versa.
                 </p>
               </div>
 
-
-
-
-
-              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+              <div class="customer-item driver-items" data-aos="zoom-in" >
                 <div class="item-img"> <img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
                 <h3 class="super-sub-points"><strong>Low cost rides</strong></h3>
                 <p class="ellipse">Rides available at very attractive rates. Low surge charges and no hidden costs. Pay
                   before you start the ride.</p>
               </div>
-              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+
+              <div class="customer-item driver-items" data-aos="zoom-in" >
                 <div class="item-img">
                   <img src="images/demo/Rider image-icon-02.png" alt="Image 3">
                 </div>
@@ -408,7 +405,8 @@
                 <p class="ellipse">Get assured rides from any metro station to your destination and vice versa in the
                   least time.</p>
               </div>
-              <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
+
+              <div class="customer-item driver-items" data-aos="zoom-in" >
                 <div class="item-img">
                   <img src="images/bike-helmet.png" alt="Image 4">
                 </div>
@@ -416,6 +414,7 @@
                 <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in
                   place.</p>
               </div>
+
             </div>
           </div>
         </div>
@@ -631,15 +630,15 @@
       $('#carouselExampleIndicators').on('slide.bs.carousel', function (event) {
         const slideIndex = event.to; // Get the index of the slide being transitioned to
 
-        // Remove "active" class from both boxes initially
-        $('.bottom-box.customers').removeClass('active');
-        $('.bottom-box.drivers-riders').removeClass('active');
+         // Remove "active" class from both h4 elements initially
+         $('.bottom-box.customers h4').removeClass('active');
+        $('.bottom-box.drivers-riders h4').removeClass('active');
 
         // Add "active" class based on the slide index
         if (slideIndex === 0) {
-          $('.bottom-box.customers').addClass('active');
+          $('.bottom-box.customers h4').addClass('active');
         } else {
-          $('.bottom-box.drivers-riders').addClass('active');
+          $('.bottom-box.drivers-riders h4').addClass('active');
         }
       });
 
@@ -647,6 +646,13 @@
       // Add click event handler for the "Drivers / Riders" box
       $('.bottom-box.drivers-riders').click(function (event) {
         event.preventDefault();
+
+                // Remove "active" class from the "Customers" h4
+                $('.bottom-box.customers h4').removeClass('active');
+
+// Add "active" class to the "Drivers" h4
+$('.bottom-box.drivers-riders h4').addClass('active');
+
 
         // Trigger carousel navigation to the "Drivers / Riders" slide
         $('#carouselExampleIndicators').carousel('to', 1);
@@ -664,6 +670,15 @@
       // Add click event handler for the "Customer" box
       $('.bottom-box.customers').click(function (event) {
         event.preventDefault();
+
+          // Remove "active" class from the "Drivers" h4
+          $('.bottom-box.drivers-riders h4').removeClass('active');
+
+// Add "active" class to the "Customers" h4
+$('.bottom-box.customers h4').addClass('active');
+
+         // Trigger carousel navigation to the "Customer" slide
+    $('#carouselExampleIndicators').carousel('to', 0);
 
         // Add zoom-in effect to the cards in the "Drivers / Riders" section
         $('#customer-part .card').addClass('zoom-in');
