--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                   </h5>
 
                   <div class="d-flex align-items-center  justify-content-evenly">
-                    <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">DOWNLOAD APP</a>
-                  <a href="Driver_registration.html" class="btn rydr-btn btn-3 banner-btn-2">SIGNUP AS DRIVER</a>
+                    <!-- <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">DOWNLOAD APP</a>
+                  <a href="Driver_registration.html" class="btn rydr-btn btn-3 banner-btn-2">SIGNUP AS DRIVER</a> -->
+                  <a href=""><button class="btn banner-btn-1">DOWNLOAD APP</button></a>
+                  <a href=""><button class="btn  banner-btn-2">SIGNUP AS DRIVER</button></a>
                   </div>
                 </span>
               </div>
