--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -128,6 +128,8 @@
 
 
         <section>
+
+            <form id="main-form"></form>
           
             <div class="container page-margin d-flex flex-column justify-content-center align-items-center ">
                 <h2 class="text-center sub-heading">Driver Registration</h2>
@@ -376,11 +378,11 @@
             </div>
 
             <div class="text-center mt-3">
-                <button class=" reg-but" id="registration-submit">SUBMIT</button>
+                <button type="submit" class=" reg-but" id="registration-submit">SUBMIT</button>
             </div>
 
         
-
+        </form>
         </section>
 
         <section>
