--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
 
-              <div class="col-12 col-md-6 margin-1 text-left" style="padding-left: 0px;">
+              <div class="col-12 col-md-6 margin-1 text-left head-banner-text" style="padding-left: 0px;">
                 <span class="welcome-text d-inline-block text-center">
                   <!-- <span class="d-inline-block text-center"> -->
                   <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30 ">
