--- a/faq.html
+++ b/faq.html
@@ -65,9 +65,9 @@
     font-weight: 500;
   }
 
-  .active, .faqs-accordion:hover {
-    /* background-color: #ccc; */
-  }
+  /* .active, .faqs-accordion:hover {
+    background-color: #ccc;
+  } */
 
   .panel {
     padding: 0 18px;
