--- a/privacy.html
+++ b/privacy.html
@@ -320,7 +320,7 @@
         <div class="container w-75">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-12">
-                    <div class="mb-80">
+                    <div class="mb-80 policy-section">
                         <p>Your privacy matters to -First And Last Mile Connectivity India Private Limited
                             (the “Company”,
                             “we”, “ Rydr”, “us” or “our”).</p>
