--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -43,6 +43,26 @@
 
     <script defer referrerpolicy="origin" src="js/s.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <style>
+        .icon-container {
+    margin-left: 10px;
+    display: flex;
+
+    align-items: center;
+}
+
+.accordion-button.success .icon-container {
+    color: rgb(6, 80, 6);
+}
+
+.accordion-button.error .icon-container {
+    color: #c30000;
+}
+
+    </style>
+
 
 </head>
 
@@ -134,12 +154,13 @@
             <div class="container page-margin d-flex flex-column justify-content-center align-items-center ">
                 <h2 class="text-center sub-heading">Driver Registration</h2>
                 <div class="accordion" id="accordionExample">
-                    <div class="accordion-item mt-2">
+                    <div class="accordion-item mt-3">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                                 aria-controls="collapseOne">
                                 Profile Info
+                                <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
@@ -165,6 +186,7 @@
                                         <textarea class="form-control" id="address" name="address" rows="3"
                                             required></textarea>
                                     </div>
+                                  <div class="">
                                     <div class="mb-3 row">
                                         <label for="pincode" class="col-sm-2 col-form-label">Pincode:</label>
                                         <div class="col-sm-10">
@@ -178,6 +200,7 @@
                                             <input type="text" class="form-control" id="city" name="city" required>
                                         </div>
                                     </div>
+                                  </div>
                                     <div class="mb-3 row">
                                         <label for="state" class="col-sm-2 col-form-label">State:</label>
                                         <div class="col-sm-10">
@@ -239,12 +262,13 @@
 
                     <!-- Driving License Accordion -->
 
-                    <div class="accordion-item mt-2">
+                    <div class="accordion-item mt-3">
                         <h2 class="accordion-header" id="headingTwo">
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
                                 aria-controls="collapseTwo">
                                 Driving License
+                                <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -266,12 +290,13 @@
 
                     <!-- Vehicle RC Accordian  -->
 
-                    <div class="accordion-item mt-2">
+                    <div class="accordion-item mt-3">
                         <h2 class="accordion-header" id="headingThree">
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                                 aria-controls="collapseThree">
                                 Vehicle RC (optional)
+                                <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -322,12 +347,13 @@
 
                     <!-- PAN Card Accordion -->
                     <!-- PAN Card Accordion -->
-                    <div class="accordion-item mt-2">
+                    <div class="accordion-item mt-3">
                         <h2 class="accordion-header" id="headingFour">
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
                                 aria-controls="collapseFour">
                                 PAN Card
+                                <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
                         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
@@ -349,12 +375,13 @@
 
                     <!-- Aadhar Card Accordian  -->
 
-                    <div class="accordion-item mt-2">
+                    <div class="accordion-item mt-3">
                         <h2 class="accordion-header" id="headingFive">
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false"
                                 aria-controls="collapseFive">
                                 Aadhar Card
+                                <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
                         <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
