--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -295,7 +295,7 @@
                             <button class="accordion-button collapsed super-sub-points" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                                 aria-controls="collapseThree">
-                                Vehicle RC (optional)
+                                Vehicle RC <span>(optional)</span>
                                 <span class="icon-container" id="icon-headingOne"></span>
                             </button>
                         </h2>
