--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
             <p>Email: reachus@rydr.co.in</p>
           </div>
         </div>
-
-        <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+          
+        <div class="col-md-3 d-flex flex-column justify-content-center align-items-center" id="contact-form">
           <div class="form-heading">
             <h3>Contact Us</h3>
           </div>
